cabal-version:       >=1.10
name:               for-git
version:            0.1.0.0
build-type:          Simple

extra-source-files:
    README.md

library
    exposed-modules:        Check
    build-depends:          base >=4.14.3.0,
                            containers
    hs-source-dirs:         src
    default-language:       Haskell2010

Test-Suite bydlopab
    type:                   exitcode-stdio-1.0
    ghc-options:            -Wall
    hs-source-dirs:         test
    main-is:                testlambda.hs
    build-depends:          base >=4.14.3.0,
                            HUnit,
                            containers,
                            for-git